<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_contact"
        android:icon="@drawable/ic_email"
        android:title="@string/menu_contact" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/menu_faq"
        android:icon="@drawable/ic_faq"
        android:title="@string/menu_faq" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>