<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/settings_surface">
    <com.google.android.material.appbar.MaterialToolbar android:id="@+id/infoToolbar"
        android:layout_width="0dp" android:layout_height="wrap_content" android:minHeight="56dp"
        app:titleTextColor="@color/glass_text" app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/glass_text" app:navigationContentDescription="@string/back_button"
        app:layout_constraintWidth_max="560dp" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.core.widget.NestedScrollView android:id="@+id/infoScroll"
...
